# pdftopdfa

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: ocr.md  pdfa-conformance.md  usage.md
src/pdftopdfa/: __init__.py  __main__.py  cli.py  converter.py  exceptions.py  extensions.py  metadata.py  ocr.py  ocr_preprocess.py  utils.py  validator.py  verapdf.py
src/pdftopdfa/color_profile/: __init__.py  _calibrated.py  _defaults.py  _detection.py  _profiles.py  _transparency.py  _types.py
src/pdftopdfa/fonts/: __init__.py  analysis.py  cid_unicode.py  cidfont.py  constants.py  embedder.py  encodings.py  glyph_mapping.py  glyph_usage.py  loader.py  metrics.py  subsetter.py  tounicode.py  traversal.py  utils.py
src/pdftopdfa/resources/: __init__.py
src/pdftopdfa/resources/cid_unicode/: LICENSES.txt
src/pdftopdfa/sanitizers/: __init__.py  actions.py  annotations.py  base.py  catalog.py  colorspaces.py  extgstate.py  files.py  filters.py  font_metrics.py  font_notdef.py  font_structure.py  font_widths.py  fonts.py  glyph_coverage.py  javascript.py  jbig2.py  jpx.py  notdef_usage.py  optional_content.py  page_boxes.py  pua_actualtext.py  rendering_intent.py  signatures.py  structure_limits.py  tounicode_values.py  truetype_encoding.py  widget_appearance.py  xfa.py  xobjects.py
tests/: conftest.py  font_helpers.py  test_actions_sanitizer.py  test_annotations_sanitizer.py  test_catalog_sanitizer.py  test_cli.py  test_color_profile.py  test_colorspace_sanitizer.py  test_converter.py  test_embedded_files.py  test_extensions.py  test_extgstate_sanitizer.py  test_filters.py  test_font_analysis.py  test_font_cid_unicode.py  test_font_cidfont.py  test_font_embedder.py  test_font_encodings.py  test_font_glyph_mapping.py  test_font_metrics.py  test_font_notdef_sanitizer.py  test_font_sanitizer.py  test_font_structure_sanitizer.py  test_font_tounicode.py  test_font_traversal.py  test_font_utils.py  test_font_width_sanitizer.py  test_fonts.py  test_glyph_coverage.py  test_glyph_usage.py  test_javascript_sanitizer.py  test_jbig2.py  test_jpx_sanitizer.py  test_metadata.py  test_notdef_usage_sanitizer.py  test_ocr.py  test_ocr_annotations.py  test_optional_content_sanitizer.py  test_page_boxes_sanitizer.py  test_pua_actualtext_sanitizer.py  (+14 more)
(+2 files in other folders)
